--- a/ObliDA2/BusinessLogic/BusinessLogic.csproj
+++ b/ObliDA2/BusinessLogic/BusinessLogic.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Domain\Domain.csproj" />
+      <ProjectReference Include="..\IBusinessLogic\IBusinessLogic.csproj" />
     </ItemGroup>
 
 </Project>
